--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,9 @@ website:
       - href: index.qmd
         text: Home
       - about.qmd
+    right: 
+      - href: pubs.qmd
+        text: Publications
 
 format:
   html:
