Add Astro version of Thoughtful AI Tools Lab website
- Created Astro project based on astro-launch-ui template
- Updated package.json with lab-specific information
- Fixed TypeScript compatibility issues with Material Tailwind components
- Created custom lab components (LabHeader, LabHero, LabFooter)
- Updated all pages with real lab content and team information
- Configured for deployment with proper site URLs
- Added documentation in README-astro.md
- Updated .gitignore to exclude build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 /.quarto/
+node_modules
+.DS_Store
+
+# Astro build artifacts
+.astro/
+dist/
+
+# Package manager files
+package-lock.json
+
+# Temporary files and build artifacts
+*.log
