--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "preview": "astro preview",
     "astro": "astro"
   },
-  "keywords": [
-  ],
+  "keywords": [],
   "author": "Ken Arnold (https://kenarnold.org), based on work by https://www.creative-tim.com/",
   "license": "MIT",
   "dependencies": {
@@ -22,13 +21,9 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^5.5.5",
-    "forward-ref": "^1.0.0",
-    "framer-motion": "^10.12.16",
     "fs-extra": "^11.1.1",
-    "json-server": "^0.17.0",
     "next": "^13.4.4",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0"
   },
