--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/tailwind": "^6.0.2",
     "@heroicons/react": "^2.0.16",
     "@material-tailwind/react": "^2.0.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^5.5.5",
